# teste_brain_ag

./: .env  README.md  docker-compose.yaml  pyproject.toml
brain/: Dockerfile  fly.toml  requirements.txt  start-django
brain/cadastro/: models.py  serializers.py  urls.py  views.py
brain/cadastro/docs/: sql_data_teste.json
brain/cadastro/management/commands/: ensure_adminuser.py
brain/cadastro/tests/: test_serializers.py  test_views.py
brain/setup/: settings.py  urls.py
